// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overlay > custom color 1`] = `
<div
  class="sc-bcXGCL eOtzel"
/>
`;

exports[`Overlay > custom duration 1`] = `
<div
  class="sc-bcXGCL jnOqTT"
/>
`;

exports[`Overlay > custom opacity 1`] = `
<div
  class="sc-bcXGCL iNTyhs"
/>
`;

exports[`Overlay > default 1`] = `
<div
  class="sc-bcXGCL eXsjSi"
/>
`;

exports[`Overlay > initial open 1`] = `
<div
  class="sc-bcXGCL imPxyi"
/>
`;
